--- a/Lawnmower/Lawnmower.vcxproj
+++ b/Lawnmower/Lawnmower.vcxproj
@@ -79,9 +79,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lawnmower.cpp" />
+    <ClCompile Include="mower.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lawnmower.h" />
+    <ClInclude Include="mower.h" />
     <ClInclude Include="properties.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
