Got two lawnmowers working standardized the settings a little differently changed the init process for the lawnmowers

--- a/Lawnmower/Lawnmower.vcxproj
+++ b/Lawnmower/Lawnmower.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="mower.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="grassfield.h" />
     <ClInclude Include="lawnmower.h" />
     <ClInclude Include="mower.h" />
     <ClInclude Include="properties.h" />
