-Created Loops -Moved all functionality out of main program into loop objects -Decoupled rendering from movement (!) -Took out some singleton crap

--- a/Lawnmower/Lawnmower.vcxproj
+++ b/Lawnmower/Lawnmower.vcxproj
@@ -78,12 +78,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="grassfield.cpp" />
     <ClCompile Include="lawnmower.cpp" />
+    <ClCompile Include="levelloop.cpp" />
     <ClCompile Include="mower.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameModeLoop.h" />
     <ClInclude Include="grassfield.h" />
     <ClInclude Include="lawnmower.h" />
+    <ClInclude Include="levelloop.h" />
     <ClInclude Include="mower.h" />
     <ClInclude Include="properties.h" />
   </ItemGroup>
